Adjusted styles a bit more, fixed a scroll overflow bug

--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -14,5 +14,10 @@
   &__boundary {
     max-width: $s-screen-boundary;
     margin: 0 auto;
+
+    &.is-full {
+      position: relative;
+      height: 100%;
+    }
   }
 }
